<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView android:text="@string/lat" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lat"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/btnDelete"
        android:layout_alignStart="@+id/btnDelete" />


    <TextView android:text="@string/lng" android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/lng"
        android:layout_alignBottom="@+id/btnDelete"
        android:layout_alignRight="@+id/btnDelete"
        android:layout_alignEnd="@+id/btnDelete"
        android:layout_gravity="bottom" />

    <Button android:id="@+id/btnAdd"
        android:text="@string/btnAdd"
        android:layout_x="30dp"
        android:layout_y="200dp"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_below="@+id/btnViewAll"
        android:layout_centerHorizontal="true" />

    <Button android:id="@+id/updateGPS"
        android:text="@string/updateGPS"
        android:layout_x="30dp"
        android:layout_y="200dp"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_below="@+id/btnAdd"
        android:layout_alignLeft="@+id/btnAdd"
        android:layout_alignStart="@+id/btnAdd" />


    <Button android:id="@+id/btnViewAll"
        android:text="@string/btnViewAll"
        android:layout_x="30dp"
        android:layout_y="400dp"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_below="@+id/btnDelete"
        android:layout_centerHorizontal="true" />

    <Button android:id="@+id/btnDelete"
        android:text="@string/btnDelete"
        android:layout_x="30dp"
        android:layout_y="600dp"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_below="@+id/lat"
        android:layout_alignLeft="@+id/btnViewAll"
        android:layout_alignStart="@+id/btnViewAll"
        android:layout_marginTop="66dp" />

</RelativeLayout>
